<resources>
    <string name="app_name">Peliculas</string>
    <string name="error_empty_field">El campo no puede estar vacío</string>
    <string name="error_empty_autocomplete">Elige un género</string>
    <string name="AlertDialog_title">"Confirmación"</string>
    <string name="AlertDialog_message">¿Estás seguro que quieres eliminar la película %s?</string>
    <string name="AlertDialog_yes">Sí</string>
    <string name="ToastEliminar_msg">Registro eliminado exitosamente</string>
    <string name="AlertDialog_no">No</string>
    <string name="ToastActualizar_msg">Registro actualizado correctamente</string>
    <string name="ToastErrorActualizar_msg">Error al actualizar la película</string>
    <string name="ToastCamposRequeridos_msg">Todos los campos son requeridos</string>
    <string name="ToastInsertar_msg">Registro guardado correctamente</string>
    <string name="ToastErrorInsertar_msg">Error al guardar la película</string>
    <string name="hintTitulo">Título</string>
    <string name="hintAnio">Año</string>
    <string name="hintDuracion">Duración</string>
    <string name="hitnCalificacion">Calificación</string>
    <string name="hintGenero">Género</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnEditar">Editar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="showTextCalificacion">Calificación: %d de 5</string>
    <string name="showTextDuracion">%d minutos</string>
    <string name="showTextAnio">Año: %s</string>
    <string name="califRange">Entre 1 y 5</string>
    <string name="anioRange">El año no puede ser mayor al actual</string>

    <string name="accion">Acción</string>
    <string name="documental">Documental</string>
    <string name="drama">Drama</string>
    <string name="musical">Musical</string>
    <string name="romance">Romance</string>
    <string name="sci_fi">Ciencia Ficción</string>
    <string name="terror">Terror</string>
    <string name="helperRequired">Req *</string>
    <string name="suffixCalif">/5</string>
    <string name="btnGuardar">Guardar</string>
    <string name="textoInsert">Inserta los datos de tu película favorita, ningún campo puede estar vacío</string>
    <string name="registroVacio">No hay películas para mostrar</string>
    <string name="textoDetalles">Encontrarás los detalles de la película a continuación, puedes editar o borrar el registro</string>
    <string name="suffixDuracion">mins</string>

    <string-array name="genres">
        <item>@string/accion</item>
        <item>@string/documental</item>
        <item>@string/drama</item>
        <item>@string/musical</item>
        <item>@string/romance</item>
        <item>@string/sci_fi</item>
        <item>@string/terror</item>
    </string-array>
</resources>